WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57208
Fix some problems of the appearance of form validation message bubble
https://bugs.webkit.org/show_bug.cgi?id=57208
Summary
Fix some problems of the appearance of form validation message bubble
Kent Tamura
Reported
2011-03-27 23:45:17 PDT
http://blog.mozilla.com/webdev/2011/03/14/html5-form-validation-on-sumo/
This page shows validation message bubbles of Firefox 4, Chrome 10, and Opera 11, and exposed some problems of the WebKit implementation. * Unexpectedly padding value is reset * Unexpectedly text color is not black. * Firefox and Opera use an isosceles triangle, WebKit uses a right triangle.
Attachments
Patch
(5.13 KB, patch)
2011-03-27 23:54 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Screenshot which shows how the appearance is updated
(14.90 KB, image/png)
2011-03-27 23:56 PDT
,
Kent Tamura
no flags
Details
Patch 2
(5.38 KB, patch)
2011-03-28 07:14 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 3
(5.48 KB, patch)
2011-03-28 07:31 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-03-27 23:54:27 PDT
Created
attachment 87105
[details]
Patch
Kent Tamura
Comment 2
2011-03-27 23:55:04 PDT
This is a workaround of
http://code.google.com/p/chromium/issues/detail?id=75766
Kent Tamura
Comment 3
2011-03-27 23:56:41 PDT
Created
attachment 87106
[details]
Screenshot which shows how the appearance is updated
Kent Tamura
Comment 4
2011-03-28 07:14:05 PDT
Created
attachment 87138
[details]
Patch 2 Update ChangeLog
Kent Tamura
Comment 5
2011-03-28 07:31:43 PDT
Created
attachment 87140
[details]
Patch 3
Dimitri Glazkov (Google)
Comment 6
2011-03-28 07:58:29 PDT
Comment on
attachment 87140
[details]
Patch 3 View in context:
https://bugs.webkit.org/attachment.cgi?id=87140&action=review
ok.
> Source/WebCore/ChangeLog:9 > + because it depends on a timer.
I wonder if we can expose explicit display of validation message by exposing a hook in the layoutTestController. Capturing this in tests seems important.
Kent Tamura
Comment 7
2011-03-28 18:01:47 PDT
Thank you for reviewing. (In reply to
comment #6
)
> I wonder if we can expose explicit display of validation message by exposing a hook in the layoutTestController. Capturing this in tests seems important.
Yes, we should have a way to test validation message. I'll file a bug for it.
Kent Tamura
Comment 8
2011-03-28 18:08:03 PDT
(In reply to
comment #7
)
> Yes, we should have a way to test validation message. > I'll file a bug for it.
Filed
Bug 57290
.
Kent Tamura
Comment 9
2011-03-28 18:11:00 PDT
Comment on
attachment 87140
[details]
Patch 3 Clearing flags on attachment: 87140 Committed
r82180
: <
http://trac.webkit.org/changeset/82180
>
Kent Tamura
Comment 10
2011-03-28 18:11:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug